# CHIP-8-emulator

./: CMakeLists.txt  README.md  chip8.c
